# scdtool

./: LICENSE  LICENSE-scdtool.txt  README.md  build_all_go_amd64.sh  build_all_go_arm64.sh
linglong-scdtool/: linglong.arm64.yaml  linglong.x86_64.yaml  linglong_arm64.yaml  linglong_x86-64.yaml
linglong-scdtool/files_arm64/share/applications/: com.scdtool.desktop
linglong-scdtool/files_x86/share/applications/: com.scdtool.scdviwer.desktop
scdeditor/: go.mod  scdeditor.go
scdparser/: go.mod  scdparser.go
scdtool-gui/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  Makefile  SCDTool_GUI.cpp  SCDTool_GUI.h  SCDTool_GUI.ui  main.cpp  scdtool-gui-src.pro
scdviewer/: CMakeLists.txt  Makefile  SCDInfoRead.cpp  SCDInfoRead.h  SCDViewer.cpp  SCDViewer.pro
scel-maker/: main.go
txtmaker/: go.mod  go.sum  txtmaker.go
